--- a/examples/basic-map.html
+++ b/examples/basic-map.html
@@ -28,7 +28,11 @@
     <div id="container"></div>
 
     <script type="text/jsx">
-      React.render(<LeafletReact />, $('#container')[0]);
+      React.render(
+        <LeafletReact
+          lat="29.817178" lon="-95.4012915" minZoom="2" maxZoom="20" zoom="10"
+        />, $('#container')[0]
+      );
     </script>
   </body>
 </html>
