--- a/examples/basic-map.html
+++ b/examples/basic-map.html
@@ -29,9 +29,22 @@
 
     <script type="text/jsx">
       React.render(
-        <LeafletReact
-          lat="29.817178" lon="-95.4012915" minZoom="2" maxZoom="20" zoom="10"
-        />, $('#container')[0]
+      <LeafletReact lat="29.817178"
+                    lon="-95.4012915"
+                    minZoom="10"
+                    maxZoom="12"
+                    zoom="10"
+                    tileProvider="http://{s}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png">
+        <LayerGroup name="communities"
+                    show-threshold="10"
+                    hide-threshold="12"
+                    src="communities.geojson" />
+        <LayerGroup name="sections"
+                    show-threshold="10"
+                    hide-threshold="12"
+                    src="sections.geojson" />
+      </LeafletReact>
+        , $('#container')[0]
       );
     </script>
   </body>
